minor change to button layout
Changed the size and layout of the buttons a bit

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
         }
         #up {
             left: 50%;
-            top: 100%;
-            transform: translate3d(-50%, -320%, 0);
+            top: 95%;
+            transform: translate3d(-50%, -220%, 0);
         }
         #down {
             left: 50%;
-            top: 100%;
-            transform: translate3d(-50%, -200%, 0);
+            top: 95%;
+            transform: translate3d(-50%, -100%, 0);
         }
         #left {
             left: 25%;
-            top: 100%;
-            transform: translate3d(-110%, -128px, 0);
+            top: 95%;
+            transform: translate3d(-110%, -100%, 0);
         }
         #right {
             left: 75%;
-            top: 100%;
-            transform: translate3d(10%, -128px, 0);
+            top: 95%;
+            transform: translate3d(10%, -100%, 0);
         }
         @media only screen and (max-width: 1500px) {
             #up, #down, #left, #right {
@@ -58,10 +58,10 @@
         </div>
         <canvas id="fireworks" width="100%" height="100%" style="display: none; position: absolute; top: 0; left: 0; z-index: 1;"></canvas>
     </div>
-    <button id="left" style="position: fixed; width: 50px; height: 88px; z-index: 5;">◄</button>
-    <button id="right" style="position: fixed; width: 50px; height: 88px; z-index: 5;">►</button>
-    <button id="up" style="position: fixed; width: 50%; height: 40px; z-index: 5;">▲</button>
-    <button id="down" style="position: fixed; width: 50%; height: 40px; z-index: 5;">▼</button>
+    <button id="left" style="position: fixed; width: 10%; height: 22%; z-index: 5;">◄</button>
+    <button id="right" style="position: fixed; width: 10%; height: 22%; z-index: 5;">►</button>
+    <button id="up" style="position: fixed; width: 50%; height: 10%; z-index: 5;">▲</button>
+    <button id="down" style="position: fixed; width: 50%; height: 10%; z-index: 5;">▼</button>
     <script>
         var difficulty = undefined;
         var differentAlgo = false;
