--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         #up, #down, #left, #right {
             display: none;
             background-color: rgba(32, 32, 32, 0.76);
+            font-size: calc(1em + 1.5vh);
             color: white;
         }
         #up {
