--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
                 display: block;
             }
         }
+        #canvaswrapper {
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        #maze, #maze-overlay {
+            position: absolute;
+            left: 50%;
+            top: 0px;
+            transform: translateX(-50%);
+            margin-bottom: 50%;
+        }
     </style>
 </head>
 <body style="background-color: black;">
@@ -53,9 +65,9 @@
         <hr>
         <br><br><br>
         <p id="timer" style="position: relative; width: 50%; margin-left: 25%; margin-right: 25%; font-family: 'Roboto', sans-serif; color: lightgray; text-align: center;">0H 0m 0s</p>
-        <div id="canvaswrapper" width="150" height="100" style="position: relative;">
-            <canvas id="maze" width="150" height="100" style="position: absolute; top: 0px; left: 0px; z-index: 2; padding-bottom: 50%;"></canvas>
-            <canvas id="maze-overlay" width="150" height="100" style="display: none; position: absolute; top: 0px; left: 0px; z-index: 3; padding-bottom: 50%;"></canvas>
+        <div id="canvaswrapper">
+            <canvas id="maze" style="z-index: 2;"></canvas>
+            <canvas id="maze-overlay" style="display: none; z-index: 3;"></canvas>
         </div>
         <canvas id="fireworks" width="100%" height="100%" style="display: none; position: absolute; top: 0; left: 0; z-index: 1;"></canvas>
     </div>
@@ -156,11 +168,7 @@
             overlay.height = height * tileSize;
 
             console.log(screen.width + " " + canvas.width)
-            if (screen.width-canvas.width > 0) {
-                $('#canvaswrapper').css("left", (screen.width-canvas.width)/2);
-                //$('#canvaswrapper').css("left", "50%");
-                //$('#canvaswrapper').css("transform", "translateX(-50%)");
-            } else {
+            if (screen.width-canvas.width <= 0) {
                 $('#canvaswrapper').css("left", 0);
             }
             
@@ -170,7 +178,6 @@
             for (let x = 0; x < width; x++) {
                 for (let y = 0; y < height; y++) {
                     var cell = new Cell(x, y);
-                    //debugger;
                     grid.push(cell);
                     if (differentAlgo) {
                         cells.push(cell);
