--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <div style="text-align: center;">
         <h1 style="color: lightgray;">THE MAZE GAME</h1>
         <div id="flexbox" style="display: flexbox; justify-content: space-evenly; margin-left: auto; margin-right: auto;">
-            <input type="number" id="speed" name="speed" value="1" min="1" max="10">
+            <input type="number" id="width" name="width" value="30" min="5" max="100">
+            <input type="number" id="height" name="height" value="30" min="5" max="100">
             <button id="easy" onclick="selectEasy()">Easy</button>
             <button id="medium" onclick="selectMedium()">Medium</button>
             <button id="hard" onclick="selectHard()">Hard</button>
@@ -164,6 +165,9 @@
                     coinAmount = Math.round(Math.random() * 6);
                 }
             }
+            width = parseInt(document.getElementById('width').value);
+            height = parseInt(document.getElementById('height').value);
+            
             const canvas = document.getElementById("maze");
             const context = canvas.getContext("2d");
             const overlay = document.getElementById("maze-overlay");
@@ -709,22 +713,22 @@
                     
                     if (upPressed && allowedUp()) {
                         if (y > 0) {
-                            y -= speed;
+                            y -= 1;
                         }
                     }
                     if (leftPressed && allowedLeft()) {
                         if (x > 0) {
-                            x -= speed;
+                            x -= 1;
                         }
                     }
                     if (downPressed && allowedDown()) {
                         if (y < height * tileSize - 7) {
-                            y += speed; 
+                            y += 1; 
                         }
                     }
                     if (rightPressed && allowedRight()) {
                         if (x < width * tileSize - 7) {
-                            x += speed; 
+                            x += 1; 
                         }
                     }
 
@@ -761,7 +765,7 @@
                     } else {
                         req = requestAnimationFrame(update);
                     }
-                }, 1000/200 * document.querySelector('#speed').value);
+                }, 1);
             }
 
             function redrawGrid() {
